--- a/music_player/.vscode/index.html
+++ b/music_player/.vscode/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Template • TodoMVC</title>
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
